--- a/src/App.css
+++ b/src/App.css
@@ -45,3 +45,51 @@ img {
 .main {
   flex-grow: 1;
 }
+
+.section {
+  display: flex;
+  flex-direction: column;
+}
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  max-width: 100%;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
+.modal--active {
+  display: block;
+}
+.inner-modal {
+  position: relative;
+  width: 100%;
+  max-width: 500px;
+  height: 300px;
+  background-color: #ffbd54;
+  margin: 200px auto;
+  padding: 20px;
+  border-radius: 10px;
+}
+.modal-btn {
+  display: block;
+  width: 200px;
+  height: 50px;
+  justify-content: center;
+  align-items: center;
+  margin: 100px auto;
+  font-size: 20px;
+  background-color: seagreen;
+  border: seagreen;
+  color: #fff;
+  border-radius: 10px;
+}
+.modal-btn:hover {
+  opacity: 0.8;
+}
